feat(ui): complete UI audit, edge-to-edge space utilization, live spooler telemetry, and service controls